--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
     </parent>
     <groupId>com.ditrasystems</groupId>
     <artifactId>comspringboot</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>comspringboot</name>
-    <description>Demo project for Spring Boot</description>
+    <description>DITRA Trade for small businesses</description>
 
     <properties>
         <java.version>1.8</java.version>
